--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.22.1",
     "url-loader": "^1.1.1",
     "webpack": "^3.12.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
     "@types/del": "^3.0.1"
